--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "skeleton-webpack",
   "version": "1.0.0",
   "description": "Basic skeleton for every project using Webpack that requires minimal customization",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack --mode development --display-error-details",
+    "dev-watch": "webpack --mode development --watch --display-error-details",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
